fix(plugin-welcome): Apply forced dark mode correctly in `WelcomePlugin` (#7506)

--- a/packages/ui/react-ui-theme/src/theme.css
+++ b/packages/ui/react-ui-theme/src/theme.css
@@ -38,10 +38,11 @@
 
 .dark {
   --surface-bg: theme(colors.neutral.850);
+  --surface-text: white;
   --input-bg: theme(colors.neutral.825);
   --input-bg-hover: theme(colors.neutral.800);
-  --surface-text: white;
   --description-text: theme(colors.neutral.500);
+  color: var(--surface-text);
 }
 
 html {
